Record Notifications.Windows.ToastActivatorCLSIDMismatchReason

This metric gives more details about case kToastActivatorClsidIncorrect
of Notifications.Windows.StartMenuShortcutStatus.

Bug: 878624
Change-Id: I3f1c68df4cae33b5b2de8d8d75581e5ab758a8b9
Reviewed-on: https://chromium-review.googlesource.com/1195680
Commit-Queue: Xi Cheng <chengx@chromium.org>
Reviewed-by: Greg Thompson <grt@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587421}
Former-commit-id: 7255318a9a96170a9c800d4edf3bc1aef7b6f189