chrome/installer/util/install_util.cc
@@ -56,13 +56,34 @@ enum class StartMenuShortcutStatus {
   kGetShortcutPathFailed = 1,
   kShortcutMissing = 2,
   kToastActivatorClsidIncorrect = 3,
-  kMaxValue = kToastActivatorClsidIncorrect,
+  kReadShortcutPropertyFailed = 4,
+  kMaxValue = kReadShortcutPropertyFailed,
 };
 
 void LogStartMenuShortcutStatus(StartMenuShortcutStatus status) {
   UMA_HISTOGRAM_ENUMERATION("Notifications.Windows.StartMenuShortcutStatus",
                             status);
 }
+
+#if defined(GOOGLE_CHROME_BUILD)
+// These values are persisted to logs. Entries should not be renumbered and
+// numeric values should never be reused.
+enum class ToastActivatorCLSIDMismatchReason {
+  kShortcutClsidIsStable = 0,
+  kShortcutClsidIsBeta = 1,
+  kShortcutClsidIsDev = 2,
+  kShortcutClsidIsChromium = 3,
+  kShortcutClsidIsNull = 4,
+  kShortcutClsidIsUnknown = 5,
+  kMaxValue = kShortcutClsidIsUnknown,
+};
+
+void RecordToastActivatorCLSIDMismatchReason(
+    ToastActivatorCLSIDMismatchReason reason) {
+  UMA_HISTOGRAM_ENUMERATION(
+      "Notifications.Windows.ToastActivatorCLSIDMismatchReason", reason);
+}
+#endif  // defined(GOOGLE_CHROME_BUILD)
 
 // Creates a zero-sized non-decorated foreground window that doesn't appear
 // in the taskbar. This is used as a parent window for calls to ShellExecuteEx
@@ -315,15 +336,62 @@ bool InstallUtil::IsStartMenuShortcutWithActivatorGuidInstalled() {
   }
 
   base::win::ShortcutProperties properties;
-  base::win::ResolveShortcutProperties(
-      shortcut_path,
-      base::win::ShortcutProperties::PROPERTIES_TOAST_ACTIVATOR_CLSID,
-      &properties);
+  if (!base::win::ResolveShortcutProperties(
+          shortcut_path,
+          base::win::ShortcutProperties::PROPERTIES_TOAST_ACTIVATOR_CLSID,
+          &properties)) {
+    LogStartMenuShortcutStatus(
+        StartMenuShortcutStatus::kReadShortcutPropertyFailed);
+    return false;
+  }
 
-  if (!::IsEqualCLSID(properties.toast_activator_clsid,
+  const CLSID& shortcut_clsid = properties.toast_activator_clsid;
+
+  if (!::IsEqualCLSID(shortcut_clsid,
                       install_static::GetToastActivatorClsid())) {
     LogStartMenuShortcutStatus(
         StartMenuShortcutStatus::kToastActivatorClsidIncorrect);
+
+#if defined(GOOGLE_CHROME_BUILD)
+    // Record the reason for CLSID mismatch between shortcut and installer. We
+    // only care about Canary.
+    const auto& details = install_static::InstallDetails::Get();
+    if (details.install_mode_index() == install_static::CANARY_INDEX) {
+      ToastActivatorCLSIDMismatchReason reason =
+          ToastActivatorCLSIDMismatchReason::kShortcutClsidIsUnknown;
+
+      // Stolen from chrome/install_static/chromium_install_modes.cc:
+      static constexpr CLSID kChromiumToastActivatorClsid = {
+          0x635EFA6F,
+          0x08D6,
+          0x4EC9,
+          {0xBD, 0x14, 0x8A, 0x0F, 0xDE, 0x97, 0x51, 0x59}};
+
+      if (::IsEqualCLSID(
+              shortcut_clsid,
+              install_static::kInstallModes[install_static::STABLE_INDEX]
+                  .toast_activator_clsid)) {
+        reason = ToastActivatorCLSIDMismatchReason::kShortcutClsidIsStable;
+      } else if (::IsEqualCLSID(
+                     shortcut_clsid,
+                     install_static::kInstallModes[install_static::BETA_INDEX]
+                         .toast_activator_clsid)) {
+        reason = ToastActivatorCLSIDMismatchReason::kShortcutClsidIsBeta;
+      } else if (::IsEqualCLSID(
+                     shortcut_clsid,
+                     install_static::kInstallModes[install_static::DEV_INDEX]
+                         .toast_activator_clsid)) {
+        reason = ToastActivatorCLSIDMismatchReason::kShortcutClsidIsDev;
+      } else if (::IsEqualCLSID(shortcut_clsid, kChromiumToastActivatorClsid)) {
+        reason = ToastActivatorCLSIDMismatchReason::kShortcutClsidIsChromium;
+      } else if (::IsEqualCLSID(shortcut_clsid, CLSID_NULL)) {
+        reason = ToastActivatorCLSIDMismatchReason::kShortcutClsidIsNull;
+      }
+
+      RecordToastActivatorCLSIDMismatchReason(reason);
+    }
+#endif  // defined(GOOGLE_CHROME_BUILD)
+
     return false;
   }
 
